added JCP and wrapped all debug-log calls in preprocessor directives; cleaned up pom.xml; removed input file from resources and now reading that file from the executing user's desktop